--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,4 +1,15 @@
 services:
+  proxy:
+    build:
+      context: ./nginx
+    depends_on:
+      - backend_core
+    ports:
+      - 8042:80
+    volumes:
+      - static_volume:/app/staticfiles
+    networks:
+      - backend_core_network
   backend_core:
     build:
       context: ./backend_core
@@ -12,7 +23,10 @@ services:
     ports:
       - 8000:8000
     networks:
-      - backend_core_db_network
+      - backend_core_network
+      - backend_db_network
+    volumes:
+      - static_volume:/app/staticfiles
   backend_core_db:
     image: postgres:14-alpine
     volumes:
@@ -22,11 +36,14 @@ services:
     ports:
       - 5432:5432
     networks:
-      - backend_core_db_network
+      - backend_db_network
 
 volumes:
   backend_core_db_volume:
+  static_volume:
 
 networks:
-  backend_core_db_network:
+  backend_core_network:
+    driver: bridge
+  backend_db_network:
     driver: bridge
